tests,fixes,visibility
